apps/uptimekuma/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimekuma
  namespace: uptimekuma
  labels:
    app: uptimekuma
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uptimekuma
  template:
    metadata:
      labels:
        app: uptimekuma
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: uptimekuma
          image: louislam/uptime-kuma:1
          ports:
            - containerPort: 3001
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: uptimekuma-data
              mountPath: /app/data
              subPath: data
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
      volumes:
        - name: uptimekuma-data
          persistentVolumeClaim:
            claimName: uptimekuma-pvc
