apps/uptimekuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma
  namespace: uptimekuma
spec:
  selector:
    app: uptimekuma
  ports:
    - port: 80
      targetPort: 3001
