apps/uptimekuma/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptimekuma
  namespace: uptimekuma
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: uptimekuma.wevelsiep.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptimekuma
                port:
                  number: 80
